--- a/Exam1.ui
+++ b/Exam1.ui
@@ -16,9 +16,9 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>290</y>
-     <width>151</width>
+     <x>180</x>
+     <y>210</y>
+     <width>161</width>
      <height>41</height>
     </rect>
    </property>
@@ -26,7 +26,7 @@
     <string>계산</string>
    </property>
   </widget>
-  <widget class="QSpinBox" name="spinBox">
+  <widget class="QSpinBox" name="spinBox_1">
    <property name="geometry">
     <rect>
      <x>180</x>
@@ -46,7 +46,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="label_1">
    <property name="geometry">
     <rect>
      <x>90</x>
@@ -76,9 +76,9 @@
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>210</y>
-     <width>201</width>
-     <height>41</height>
+     <y>290</y>
+     <width>161</width>
+     <height>31</height>
     </rect>
    </property>
   </widget>
@@ -86,7 +86,7 @@
    <property name="geometry">
     <rect>
      <x>90</x>
-     <y>210</y>
+     <y>290</y>
      <width>71</width>
      <height>31</height>
     </rect>
